chathura | edited SplashLogo

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/EventGoSplash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
