--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.3",
@@ -18,15 +19,18 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.11",
     "expo-linking": "^6.0.0",
+    "expo-location": "~16.1.0",
     "expo-router": "^2.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-maps": "1.7.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-reanimated": "3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
