--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,15 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-maps": "1.7.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
     "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
