--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -32,10 +33,10 @@
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
     "react-native-reanimated": "3.3.0",
+    "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.25.0",
-    "react-native-svg": "^13.14.0",
-    "react-native-root-toast": "^3.5.1"
+    "react-native-svg": "^13.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
