--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.1",
+    "burnt": "^0.12.1",
     "expo": "~49.0.11",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "^6.0.0",
