--- a/backend/package.json
+++ b/backend/package.json
@@ -26,10 +26,12 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "mongoose": "^7.4.3",
+    "@nestjs/platform-express": "^10.2.7",
     "argon2": "^0.31.0",
+    "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
