--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,11 +32,13 @@
     "react-native-maps": "1.7.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "3.3.0",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.25.0",
-    "react-native-svg": "^13.14.0"
+    "react-native-svg": "^13.14.0",
+    "react-native-view-shot": "^3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
